--- a/src/components/projectCard/projectCard.module.css
+++ b/src/components/projectCard/projectCard.module.css
@@ -2,6 +2,7 @@
     position: relative;
     background-color: var(--black);
     width: 370px;
+    max-width: 100%;
     padding: 1.5rem;
     border-radius: 8px;
     margin-bottom: 1.5rem;
